kubernetes/namespace.yml
# Namespace Configuration file for Portfolio Project
kind: Namespace
apiVersion: v1
metadata:
  name: portfolio
