kubernetes/deployment.yml
# Deployment Configuration for portfolio  project
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  namespace: portfolio
  labels:
    app: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio-container
        image: harsh9308/devops-portfolio:7b09698
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1000m"

        readinessProbe:
          tcpSocket:
            port: 3000                
          initialDelaySeconds: 5      
          periodSeconds: 10
