kubernetes/gateway.yml
# workflow for gateway controller
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: portfolio-gateway
  namespace: portfolio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoy-gateway
  listeners:
  
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname:   44.239.124.101.sslip.io




      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: portfolio-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio-route
  namespace: portfolio
spec:
  hostnames:
    - 44.239.124.101.sslip.io   
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: portfolio-gateway
      sectionName: https
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: portfolio-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: portfolio-service
          port: 3000
          weight: 1
---

apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: portfolio-session
  namespace: portfolio
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: portfolio-route
  loadBalancer:
    type: ConsistentHash
    consistentHash:
      type: Cookie
      cookie:
        name: SKILLPULSE_AFFINITY
        ttl: 3600s
